@@ -286,6 +286,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6001) PAGENAMEE and FULLPAGENAMEE don't work in FULLURL and LOCALURL magic
   words
 * (bug 5958) Switch Uzbek language name to use latin script
+* (bug 839) Add URLENCODE magic word
 
 == Compatibility ==
 
